# Discord-Rust-Bot

./: Cargo.toml  README.md  example.env
.github/workspaces/docs/: crates.js  help.html  settings.html  src-files.js
.github/workspaces/docs/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
.github/workspaces/docs/arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
.github/workspaces/docs/async_trait/: all.html  attr.async_trait.html  index.html
.github/workspaces/docs/base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
.github/workspaces/docs/bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
.github/workspaces/docs/block_buffer/: all.html  index.html  struct.BlockBuffer.html  struct.Eager.html  struct.Error.html  struct.Lazy.html  trait.BufferKind.html  type.Block.html  type.EagerBuffer.html  type.LazyBuffer.html
.github/workspaces/docs/bot/: all.html  (+4 more)
src/: main.rs
src/commands/: attachmentinput.rs  handler.rs  mod.rs  numberinput.rs  register.rs  welcome.rs
src/messages/: main.rs
src/models/: api.rs
src/services/: mod.rs  openai.rs
src/services/gitlab/: gitlab.rs  mod.rs
(+21966 files in other folders)
