[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serenity = {version = "0.12.0", features = ["framework", "utils", "full"]}
tokio = {version ="1.36.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.21.7"
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
